libs/sdk-flutter/ios/Classes/frb_generated.h

typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_list_payment_type_filter {
  int32_t *ptr;
  int32_t len;
} wire_cst_list_payment_type_filter;
typedef struct wire_cst_list_metadata_filter {
  struct wire_cst_metadata_filter *ptr;
  int32_t len;
} wire_cst_list_metadata_filter;
typedef struct wire_cst_list_payments_request {
  struct wire_cst_list_payment_type_filter *filters;
  struct wire_cst_list_metadata_filter *metadata_filters;
  int64_t *from_timestamp;
  int64_t *to_timestamp;
  bool *include_failures;
  uint32_t *offset;
  uint32_t *limit;
} wire_cst_list_payments_request;
typedef struct wire_cst_ln_url_auth_request_data {
  struct wire_cst_list_prim_u_8_strict *k1;
  struct wire_cst_list_prim_u_8_strict *action;
  struct wire_cst_list_prim_u_8_strict *domain;
  struct wire_cst_list_prim_u_8_strict *url;
} wire_cst_ln_url_auth_request_data;
typedef struct wire_cst_ln_url_pay_request_data {
  struct wire_cst_list_prim_u_8_strict *callback;
  uint64_t min_sendable;
  uint64_t max_sendable;
  struct wire_cst_list_prim_u_8_strict *metadata_str;
  uint16_t comment_allowed;
  struct wire_cst_list_prim_u_8_strict *domain;
  bool allows_nostr;
  struct wire_cst_list_prim_u_8_strict *nostr_pubkey;
  struct wire_cst_list_prim_u_8_strict *ln_address;
} wire_cst_ln_url_pay_request_data;
typedef struct wire_cst_ln_url_pay_request {
  struct wire_cst_ln_url_pay_request_data data;
  uint64_t amount_msat;
  struct wire_cst_list_prim_u_8_strict *comment;
  struct wire_cst_list_prim_u_8_strict *payment_label;
} wire_cst_ln_url_pay_request;
typedef struct wire_cst_ln_url_withdraw_request_data {
  struct wire_cst_list_prim_u_8_strict *callback;
  struct wire_cst_list_prim_u_8_strict *k1;
  struct wire_cst_list_prim_u_8_strict *default_description;
  uint64_t min_withdrawable;
  uint64_t max_withdrawable;
} wire_cst_ln_url_withdraw_request_data;
typedef struct wire_cst_ln_url_withdraw_request {
  struct wire_cst_ln_url_withdraw_request_data data;
  uint64_t amount_msat;
  struct wire_cst_list_prim_u_8_strict *description;
} wire_cst_ln_url_withdraw_request;
typedef struct wire_cst_open_channel_fee_request {
  uint64_t *amount_msat;
  uint32_t *expiry;
} wire_cst_open_channel_fee_request;
typedef struct wire_cst_prepare_onchain_payment_response {
  struct wire_cst_list_prim_u_8_strict *fees_hash;
  double fees_percentage;
  uint64_t fees_lockup;
  uint64_t fees_claim;
  uint64_t sender_amount_sat;
  uint64_t recipient_amount_sat;
  uint64_t total_fees;
} wire_cst_prepare_onchain_payment_response;
typedef struct wire_cst_pay_onchain_request {
  struct wire_cst_list_prim_u_8_strict *recipient_address;
  struct wire_cst_prepare_onchain_payment_response prepare_res;
} wire_cst_pay_onchain_request;
typedef struct wire_cst_prepare_onchain_payment_request {
  uint64_t amount_sat;
  int32_t amount_type;
  uint32_t claim_tx_feerate;
} wire_cst_prepare_onchain_payment_request;
typedef struct wire_cst_prepare_redeem_onchain_funds_request {
  struct wire_cst_list_prim_u_8_strict *to_address;
  uint32_t sat_per_vbyte;
} wire_cst_prepare_redeem_onchain_funds_request;
void frbgen_breez_sdk_wire_in_progress_swap(int64_t port_);
void frbgen_breez_sdk_wire_is_initialized(int64_t port_);
void frbgen_breez_sdk_wire_list_fiat_currencies(int64_t port_);
void frbgen_breez_sdk_wire_list_lsps(int64_t port_);
void frbgen_breez_sdk_wire_list_payments(int64_t port_, struct wire_cst_list_payments_request *req);
void frbgen_breez_sdk_wire_list_refundables(int64_t port_);
void frbgen_breez_sdk_wire_lnurl_auth(int64_t port_,
                                      struct wire_cst_ln_url_auth_request_data *req_data);
void frbgen_breez_sdk_wire_lnurl_pay(int64_t port_, struct wire_cst_ln_url_pay_request *req);
void frbgen_breez_sdk_wire_lnurl_withdraw(int64_t port_,
                                          struct wire_cst_ln_url_withdraw_request *req);
void frbgen_breez_sdk_wire_lsp_id(int64_t port_);
void frbgen_breez_sdk_wire_lsp_info(int64_t port_);
void frbgen_breez_sdk_wire_max_reverse_swap_amount(int64_t port_);
void frbgen_breez_sdk_wire_mnemonic_to_seed(int64_t port_,
                                            struct wire_cst_list_prim_u_8_strict *phrase);
void frbgen_breez_sdk_wire_node_credentials(int64_t port_);
void frbgen_breez_sdk_wire_node_info(int64_t port_);
void frbgen_breez_sdk_wire_onchain_payment_limits(int64_t port_);
void frbgen_breez_sdk_wire_open_channel_fee(int64_t port_,
                                            struct wire_cst_open_channel_fee_request *req);
void frbgen_breez_sdk_wire_parse_input(int64_t port_, struct wire_cst_list_prim_u_8_strict *input);
void frbgen_breez_sdk_wire_parse_invoice(int64_t port_,
                                         struct wire_cst_list_prim_u_8_strict *invoice);
void frbgen_breez_sdk_wire_pay_onchain(int64_t port_, struct wire_cst_pay_onchain_request *req);
void frbgen_breez_sdk_wire_payment_by_hash(int64_t port_,
                                           struct wire_cst_list_prim_u_8_strict *hash);
void frbgen_breez_sdk_wire_prepare_onchain_payment(int64_t port_,
                                                   struct wire_cst_prepare_onchain_payment_request *req);
void frbgen_breez_sdk_wire_prepare_redeem_onchain_funds(int64_t port_,
                                                        struct wire_cst_prepare_redeem_onchain_funds_request *req);