libs/sdk-flutter/lib/breez_sdk_core_bindings_generated.dart


  late final _frbgen_breez_sdk_wire_in_progress_swapPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_in_progress_swap');
  late final _frbgen_breez_sdk_wire_in_progress_swap =
      _frbgen_breez_sdk_wire_in_progress_swapPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_is_initialized(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_is_initialized(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_is_initializedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_is_initialized');
  late final _frbgen_breez_sdk_wire_is_initialized =
      _frbgen_breez_sdk_wire_is_initializedPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_list_fiat_currencies(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_list_fiat_currencies(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_list_fiat_currenciesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_list_fiat_currencies');
  late final _frbgen_breez_sdk_wire_list_fiat_currencies =
      _frbgen_breez_sdk_wire_list_fiat_currenciesPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_list_lsps(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_list_lsps(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_list_lspsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_list_lsps');
  late final _frbgen_breez_sdk_wire_list_lsps =
      _frbgen_breez_sdk_wire_list_lspsPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_list_payments(
    int port_,
    ffi.Pointer<wire_cst_list_payments_request> req,
  ) {
    return _frbgen_breez_sdk_wire_list_payments(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_list_paymentsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_payments_request>)>>(
          'frbgen_breez_sdk_wire_list_payments');
  late final _frbgen_breez_sdk_wire_list_payments = _frbgen_breez_sdk_wire_list_paymentsPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_list_payments_request>)>();

  void frbgen_breez_sdk_wire_list_refundables(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_list_refundables(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_list_refundablesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_list_refundables');
  late final _frbgen_breez_sdk_wire_list_refundables =
      _frbgen_breez_sdk_wire_list_refundablesPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_lnurl_auth(
    int port_,
    ffi.Pointer<wire_cst_ln_url_auth_request_data> req_data,
  ) {
    return _frbgen_breez_sdk_wire_lnurl_auth(
      port_,
      req_data,
    );
  }

  late final _frbgen_breez_sdk_wire_lnurl_authPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_ln_url_auth_request_data>)>>(
      'frbgen_breez_sdk_wire_lnurl_auth');
  late final _frbgen_breez_sdk_wire_lnurl_auth = _frbgen_breez_sdk_wire_lnurl_authPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_ln_url_auth_request_data>)>();

  void frbgen_breez_sdk_wire_lnurl_pay(
    int port_,
    ffi.Pointer<wire_cst_ln_url_pay_request> req,
  ) {
    return _frbgen_breez_sdk_wire_lnurl_pay(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_lnurl_payPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_ln_url_pay_request>)>>(
          'frbgen_breez_sdk_wire_lnurl_pay');
  late final _frbgen_breez_sdk_wire_lnurl_pay = _frbgen_breez_sdk_wire_lnurl_payPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_ln_url_pay_request>)>();

  void frbgen_breez_sdk_wire_lnurl_withdraw(
    int port_,
    ffi.Pointer<wire_cst_ln_url_withdraw_request> req,
  ) {
    return _frbgen_breez_sdk_wire_lnurl_withdraw(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_lnurl_withdrawPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_ln_url_withdraw_request>)>>(
      'frbgen_breez_sdk_wire_lnurl_withdraw');
  late final _frbgen_breez_sdk_wire_lnurl_withdraw = _frbgen_breez_sdk_wire_lnurl_withdrawPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_ln_url_withdraw_request>)>();

  void frbgen_breez_sdk_wire_lsp_id(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_lsp_id(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_lsp_idPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_lsp_id');
  late final _frbgen_breez_sdk_wire_lsp_id =
      _frbgen_breez_sdk_wire_lsp_idPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_lsp_info(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_lsp_info(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_lsp_infoPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_lsp_info');
  late final _frbgen_breez_sdk_wire_lsp_info =
      _frbgen_breez_sdk_wire_lsp_infoPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_max_reverse_swap_amount(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_max_reverse_swap_amount(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_max_reverse_swap_amountPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'frbgen_breez_sdk_wire_max_reverse_swap_amount');
  late final _frbgen_breez_sdk_wire_max_reverse_swap_amount =
      _frbgen_breez_sdk_wire_max_reverse_swap_amountPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_mnemonic_to_seed(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> phrase,
  ) {
    return _frbgen_breez_sdk_wire_mnemonic_to_seed(
      port_,
      phrase,
    );
  }

  late final _frbgen_breez_sdk_wire_mnemonic_to_seedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>(
          'frbgen_breez_sdk_wire_mnemonic_to_seed');
  late final _frbgen_breez_sdk_wire_mnemonic_to_seed = _frbgen_breez_sdk_wire_mnemonic_to_seedPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void frbgen_breez_sdk_wire_node_credentials(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_node_credentials(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_node_credentialsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_node_credentials');
  late final _frbgen_breez_sdk_wire_node_credentials =
      _frbgen_breez_sdk_wire_node_credentialsPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_node_info(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_node_info(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_node_infoPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>('frbgen_breez_sdk_wire_node_info');
  late final _frbgen_breez_sdk_wire_node_info =
      _frbgen_breez_sdk_wire_node_infoPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_onchain_payment_limits(
    int port_,
  ) {
    return _frbgen_breez_sdk_wire_onchain_payment_limits(
      port_,
    );
  }

  late final _frbgen_breez_sdk_wire_onchain_payment_limitsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'frbgen_breez_sdk_wire_onchain_payment_limits');
  late final _frbgen_breez_sdk_wire_onchain_payment_limits =
      _frbgen_breez_sdk_wire_onchain_payment_limitsPtr.asFunction<void Function(int)>();

  void frbgen_breez_sdk_wire_open_channel_fee(
    int port_,
    ffi.Pointer<wire_cst_open_channel_fee_request> req,
  ) {
    return _frbgen_breez_sdk_wire_open_channel_fee(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_open_channel_feePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_open_channel_fee_request>)>>(
      'frbgen_breez_sdk_wire_open_channel_fee');
  late final _frbgen_breez_sdk_wire_open_channel_fee = _frbgen_breez_sdk_wire_open_channel_feePtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_open_channel_fee_request>)>();

  void frbgen_breez_sdk_wire_parse_input(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> input,
  ) {
    return _frbgen_breez_sdk_wire_parse_input(
      port_,
      input,
    );
  }

  late final _frbgen_breez_sdk_wire_parse_inputPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>(
          'frbgen_breez_sdk_wire_parse_input');
  late final _frbgen_breez_sdk_wire_parse_input = _frbgen_breez_sdk_wire_parse_inputPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void frbgen_breez_sdk_wire_parse_invoice(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> invoice,
  ) {
    return _frbgen_breez_sdk_wire_parse_invoice(
      port_,
      invoice,
    );
  }

  late final _frbgen_breez_sdk_wire_parse_invoicePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>(
          'frbgen_breez_sdk_wire_parse_invoice');
  late final _frbgen_breez_sdk_wire_parse_invoice = _frbgen_breez_sdk_wire_parse_invoicePtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void frbgen_breez_sdk_wire_pay_onchain(
    int port_,
    ffi.Pointer<wire_cst_pay_onchain_request> req,
  ) {
    return _frbgen_breez_sdk_wire_pay_onchain(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_pay_onchainPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_pay_onchain_request>)>>(
          'frbgen_breez_sdk_wire_pay_onchain');
  late final _frbgen_breez_sdk_wire_pay_onchain = _frbgen_breez_sdk_wire_pay_onchainPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_pay_onchain_request>)>();

  void frbgen_breez_sdk_wire_payment_by_hash(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> hash,
  ) {
    return _frbgen_breez_sdk_wire_payment_by_hash(
      port_,
      hash,
    );
  }

  late final _frbgen_breez_sdk_wire_payment_by_hashPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>(
          'frbgen_breez_sdk_wire_payment_by_hash');
  late final _frbgen_breez_sdk_wire_payment_by_hash = _frbgen_breez_sdk_wire_payment_by_hashPtr
      .asFunction<void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  void frbgen_breez_sdk_wire_prepare_onchain_payment(
    int port_,
    ffi.Pointer<wire_cst_prepare_onchain_payment_request> req,
  ) {
    return _frbgen_breez_sdk_wire_prepare_onchain_payment(
      port_,
      req,
    );
  }

  late final _frbgen_breez_sdk_wire_prepare_onchain_paymentPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_prepare_onchain_payment_request>)>>(
      'frbgen_breez_sdk_wire_prepare_onchain_payment');
  late final _frbgen_breez_sdk_wire_prepare_onchain_payment =
      _frbgen_breez_sdk_wire_prepare_onchain_paymentPtr
          .asFunction<void Function(int, ffi.Pointer<wire_cst_prepare_onchain_payment_request>)>();

  void frbgen_breez_sdk_wire_prepare_redeem_onchain_funds(
    int port_,
    ffi.Pointer<wire_cst_prepare_redeem_onchain_funds_request> req,
  ) {
    return _frbgen_breez_sdk_wire_prepare_redeem_onchain_funds(
      port_,
      req,
    );
  }
